# mypuzzle

./: Cargo.toml
assets/prefabs/: cube.ron  floor.ron  sphere.ron  world.ron
config/: bindings.ron  display_config.ron
src/: input.rs  main.rs  prefabs.rs  state.rs
src/components/: interaction.rs  mod.rs  physics.rs
src/systems/: camera.rs  mod.rs  movement.rs  physics.rs
